# Prisoners_dilemma

./: CMakeLists.txt  main.cpp  matrix.txt
include/competitions/: Competition.h  DetailedCompetition.h  FastCompetition.h  TournamentCompetition.h
include/parser/: Parser.h
include/strategies/: AlwaysBetrayStrategy.h  AlwaysCooperateStrategy.h  EnviousMercifulStrategy.h  EnviousStrategy.h  RandomStrategy.h  RevengefulMercifulStrategy.h  RevengefulStrategy.h  Strategy.h  StrategyFactory.h  UltimateRandomStrategy.h
src/competitions/: DetailedCompetition.cpp  FastCompetition.cpp  TournamentCompetition.cpp
src/parser/: Parser.cpp
src/strategies/: AlwaysBetrayStrategy.cpp  AlwaysCooperateStrategy.cpp  EnviousMercifulStrategy.cpp  EnviousStrategy.cpp  RandomStrategy.cpp  RevengefulMercifulStrategy.cpp  RevengefulStrategy.cpp  StrategyFactory.cpp  UltimateRandomStrategy.cpp
test/: CMakeLists.txt  Competitions.cpp  DefaultStrategies.cpp  Parser.cpp
